tests/ui/consts/interior-mut-const-via-union.32bit.stderr
error[E0080]: constructing invalid value at .<deref>.y.<enum-variant(B)>.0: encountered `UnsafeCell` in read-only memory
  --> $DIR/interior-mut-const-via-union.rs:34:1
   |
LL | fn main() {
   | ^^^^^^^^^ it is undefined behavior to use this value
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: 4, align: 4) {
               ╾ALLOC0╼                                     │ ╾──╼
           }

note: erroneous constant encountered
  --> $DIR/interior-mut-const-via-union.rs:36:25
   |
LL |     let _: &'static _ = &C;
   |                         ^^

note: erroneous constant encountered
  --> $DIR/interior-mut-const-via-union.rs:36:25
   |
LL |     let _: &'static _ = &C;
   |                         ^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
